--- a/week-06/day-2/src/main/resources/templates/puffy.html
+++ b/week-06/day-2/src/main/resources/templates/puffy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Getting Started: Serving Web Content</title>
+  <title>Puffy of the Week!</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
