--- a/week-06/day-5/src/main/resources/templates/webshop.html
+++ b/week-06/day-5/src/main/resources/templates/webshop.html
@@ -8,7 +8,9 @@
 <body>
 <table>
   <tr>
-    <h1>My Shop</h1>
+    <h1>
+      <a href="localhost:8080/webshop">My Shop</a>
+    </h1>
   </tr>
   <tr id=filter>
     <td>
