--- a/week-07/day-1/src/main/resources/templates/text.html
+++ b/week-07/day-1/src/main/resources/templates/text.html
@@ -5,7 +5,7 @@
   <title>Text</title>
 </head>
 <body>
-  <p th:text="${text}"></pth:text></p>
+  <p th:text="${text}"></p>
   <p th:utext="${text}"></p>
 </body>
 </html>
