--- a/week-07/day-1/src/main/resources/templates/index.html
+++ b/week-07/day-1/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
       <th>Index</th>
       <th>Good/Bad?</th>
     </tr>
-    <tr th:each="account : ${accounts}" th:style="${account.isKing() ? 'background-color: yellow' : 'color:black'}">
+    <tr th:each="account : ${accounts}" th:style="${account.getKing() ? 'background-color: yellow' : 'color:black'}">
       <div th:switch="${account.isGoodGuy()}">
         <td th:text="${account.getName()}"></td>
         <td th:text="${account.getBalance()}"> </td>
@@ -27,17 +27,16 @@
   </table>
 </div>
 <div>
-  <form
-      action="#"
-      th:action="@{/raise}"
-      th:method="post"
-  >
+  <form action="#" th:action="@{/raise}" th:method="post">
     <label>Raise the balance of a selected animal:</label>
     <select name="animalIndex">
       <option th:each="bankAccount : ${accounts}" th:text="${bankAccount.getName()}" th:value="${bankAccountStat.index}"></option>
     </select>
     <input type="submit" value="Raise Balance">
   </form>
+</div>
+<div>
+  <button onclick="window.location.href = '/signup';">Add a new Account</button>
 </div>
 </body>
 </html>
