NutritionStore is done, TrickCenter is in progress

--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <ul>
-  <li><a th:href="@{/}">Information</a></li>
   <li><a th:href="@{/login}">Login</a></li>
   <li><a th:href="@{/create}">Create a New Fox</a></li>
   <li><a th:href="@{/nutritionStore(name=${fox.name})}">Nutrition Store</a></li>
+  <li><a th:href="@{/trickCenter(name=${fox.name})}">Trickcenter</a></li>
 </ul>
 <br>
 <img src="greenfox.png">
