--- a/week-07/day-4/src/main/resources/templates/create.html
+++ b/week-07/day-4/src/main/resources/templates/create.html
@@ -5,14 +5,16 @@
   <title>Create</title>
 </head>
 <body>
-<li><a th:href="@{/login}">Login</a></li>
+<th:block>
+  <label>New Fox</label>
+  <form th:action="@{/create}" th:method="post" th:object="${fox}">
+    <input type="text" th:field="*{name}" required placeholder="name" oninvalid="this.setCustomValidity('Please add a name')">
+    <input type="text" th:field="*{food}" required placeholder="food" oninvalid="this.setCustomValidity('Please add a food')">
+    <input type="text" th:field="*{drink}" required placeholder="drink" oninvalid="this.setCustomValidity('Please add a drink')">
+    <button type="submit">Create</button>
+  </form>
+</th:block>
 <br>
-<label>New Fox</label>
-<form th:action="@{/create}" th:method="post" th:object="${fox}">
-  <input type="text" th:field="*{name}" required placeholder="name" oninvalid="this.setCustomValidity('Please add a name')">
-  <input type="text" th:field="*{food}" required placeholder="food" oninvalid="this.setCustomValidity('Please add a food')">
-  <input type="text" th:field="*{drink}" required placeholder="drink" oninvalid="this.setCustomValidity('Please add a drink')">
-  <button type="submit">Create</button>
-</form>
+<a th:href="@{/login}">Do you have a pet? Login!</a>
 </body>
 </html>
