--- a/week-07/day-1/src/main/resources/templates/signup.html
+++ b/week-07/day-1/src/main/resources/templates/signup.html
@@ -5,6 +5,23 @@
   <meta charset="utf-8"/>
 </head>
 <body>
+
+<th:block>
+  <label>Create new account</label>
+  <form th:action="@{/signup}" th:method="post" th:object="${newAccount}">
+    <input type="text" th:field="*{name}" required placeholder="name">
+    <input type="text" th:field="*{balance}" required placeholder="balance">
+    <input type="text" th:field="*{animalType}" required placeholder="animalType">
+    <input type="text" th:field="*{king}" required placeholder="king (true / false)">
+    <input type="text" th:field="*{goodGuy}" required placeholder="goodGuy (true / false)">
+    <button type="submit">Create</button>
+  </form>
+</th:block>
+
+
+<!--
+
+
 <th:block>
   <form action="#" th:action="@{/signup}" th:method="post" th:object="${newAccount}">
     <th:block>
@@ -23,6 +40,6 @@
     </th:block>
     <button type="submit">Create</button>
   </form>
-</th:block>
+</th:block>-->
 </body>
 </html>
