--- a/week-08/day-2/connecttomysql/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/connecttomysql/src/main/resources/templates/todolist.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<link rel="stylesheet" type="text/css" href="/styles.css">
 <head>
   <meta charset="UTF-8">
-  <title>ToDoList</title>
+  <title>Todo CRUD App</title>
 </head>
 <body>
 <h1>Todos for today</h1>
-<li th:each="todo : ${todos}" th:text="${todo.getTitle()}"></li>
+<a th:href="@{/todo/add}">Add new todo</a>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Id</th>
+    <th>Urgent</th>
+    <th>Done</th>
+  </tr>
+  <tr th:each="todo : ${todos}">
+    <td th:text="${todo.getTitle()}"></td>
+    <td th:text="${todo.getId()}"></td>
+    <td th:text="${todo.isUrgent()}"></td>
+    <td th:text="${todo.isDone()}"></td>
+    <td><a th:href="@{'/todo/' + ${todo.getId()} + '/delete'}">delete</a></td>
+    <td><a th:href="@{'/todo/' + ${todo.getId()} + '/edit'}">edit</a></td>
+  </tr>
+</table>
+
 </body>
 </html>
