Assignee's list, edit, delete tasks are done

--- a/week-08/day-2/connecttomysql/src/main/resources/templates/edit.html
+++ b/week-08/day-2/connecttomysql/src/main/resources/templates/edit.html
@@ -9,7 +9,7 @@
 <form th:action="@{'/todo/' + ${id} + '/edit'}"
       th:method="post" th:object="${todo}">
   <label>Todo Description</label>
-  <input id="title" type="text" th:field="*{title}">
+  <input type="text" th:field="*{title}">
   <label>Urgent</label>
   <input type="checkbox" th:field="*{urgent}" th:checked="*{urgent}">
   <label>Done</label>
