--- a/week-08/day-2/connecttomysql/src/main/resources/templates/edit.html
+++ b/week-08/day-2/connecttomysql/src/main/resources/templates/edit.html
@@ -14,6 +14,10 @@
   <input type="checkbox" th:field="*{urgent}" th:checked="*{urgent}">
   <label>Done</label>
   <input type="checkbox" th:field="*{done}" th:checked="*{done}">
+  <label>Assignee</label>
+  <select name="assigneeId">
+    <option th:each="assignee : ${assignees}" th:text="${assignee.getName()}" th:value="${assignee.getId()}"></option>
+  </select>
   <button type="submit">Submit</button>
 </form>
 <a th:href="@{/todo/}">Cancel</a>
